@@ -1,4 +1,4 @@
-﻿PbootCMS V1.1.6 build 2018-07-15
+﻿PbootCMS V1.1.6 build 2018-07-20
 1、优化编辑器配置及安全加固;
 2、优化内容管理列表布局；
 3、增强系统后台及标签解析引擎安全性；
@@ -19,6 +19,8 @@
 18、新增URL路径支持中文；
 19、新增中文用户名登陆的支持；
 20、新增API正文内容返回图片路径自动添加网址路径；
+21、新增邮件配置中发送测试邮件功能；
+22、其他问题修改与优化；
 注意：升级到此版本需要同时升级数据库，脚本见升级包中。
 
 PbootCMS V1.1.5 build 2018-07-10
